<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.inventory.DetailsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:weightSum="1">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:fontFamily="monospace"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ProductName"
                android:textSize="32sp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":  "
                android:textSize="32sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text ="10"
                android:textColor="#0000ff"
                android:textSize="32sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:padding="4dp"
            android:textColor="#85bb65"
            android:textSize="30sp"
            tools:text="$9.50" />

        <TextView
            android:id="@+id/soldAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:fontFamily="monospace"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="Sold:1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:text="@string/initquantity"
                android:textSize="16sp" />
            <Button
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:theme="@style/MyButton"
                android:id="@+id/minus"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="-"/>
            <Button
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:theme="@style/MyButton"
                android:id="@+id/plus"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="+" />
        </LinearLayout>


        <Button
            android:theme="@style/MyButton"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/shipment"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/shipment"
            android:textAlignment="center"/>

        <Button
            android:theme="@style/MyButton"
            android:layout_marginBottom="24dp"
            android:id="@+id/sale"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sale"
            android:textAlignment="center"/>

        <Button
            android:theme="@style/MyButton"
            android:layout_marginBottom="24dp"
            android:id="@+id/deleteButton"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/del"
            android:layout_gravity="center"
            android:textAlignment="center" />

        <Button
            android:theme="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:id="@+id/button"
            android:layout_gravity="right" />


    </LinearLayout>
</ScrollView>